Bug 151699 - CALC in column filter dialog the quick typing text box is missing
Summary: CALC in column filter dialog the quick typing text box is missing
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
7.4.2.3 release
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.5.0 target:7.4.3
Keywords: bibisected, bisected, regression
: 151733 151784 151867 151877 (view as bug list)
Depends on:
Blocks: GTK3
  Show dependency treegraph
 
Reported: 2022-10-22 07:27 UTC by Marco Colnaghi
Modified: 2022-11-03 14:49 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Marco Colnaghi 2022-10-22 07:27:37 UTC
Description:
In LO Calc using filters and opening a column filter dialog the text box for quick filter typing is missing

Steps to Reproduce:
1.add filter
2.open filter dialog for a column
3.

Actual Results:
the quick typing filter is missing

Expected Results:
between "filter by condition" and "values list" should be present the quick typing box 


Reproducible: Always


User Profile Reset: Yes

Additional Info:
show a text box for quick filter value typing
Comment 1 raal 2022-10-22 08:43:33 UTC
No repro with Version: 7.5.0.0.alpha0+ / LibreOffice Community
Build ID: f3a82a8ba51195cf31b0f78164735acc7ebbcd2f
CPU threads: 4; OS: Linux 5.15; UI render: default; VCL: x11
Locale: cs-CZ (cs_CZ.UTF-8); UI: en-US
Calc: threaded

but missing in Version: 7.5.0.0.alpha0+ / LibreOffice Community
Build ID: f3a82a8ba51195cf31b0f78164735acc7ebbcd2f
CPU threads: 4; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: cs-CZ (cs_CZ.UTF-8); UI: en-US
Calc: threaded
Comment 2 raal 2022-10-22 08:48:50 UTC
This seems to have begun at the below commit.
Adding Cc: to Caolán McNamara; Could you possibly take a look at this one?
Thanks
 6653c97a39606de07bde0318c0de323f2c033724 is the first bad commit
commit 6653c97a39606de07bde0318c0de323f2c033724
Author: Jenkins Build User <tdf@pollux.tdf>
Date:   Wed Sep 7 20:26:40 2022 +0200

    source 9220716bed8ff4337453f06788233aa73463d63b

https://git.libreoffice.org/core/+/9220716bed8ff4337453f06788233aa73463d63b
Comment 3 Commit Notification 2022-10-22 15:40:08 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/14a84557331ae9d65d40b820c82027529a6de6fe

Resolves: tdf#151699 show/hide the overlay along with the edit

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Caolán McNamara 2022-10-22 15:40:38 UTC
done in trunk, backport to 7-4 in gerrit
Comment 5 Marco Colnaghi 2022-10-22 17:21:11 UTC
thanks guys,
you're great!
Comment 6 Commit Notification 2022-10-24 10:15:26 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-4":

https://git.libreoffice.org/core/commit/3f472b496be39a0fc1630cd31bfc5f1b9747127e

Resolves: tdf#151699 show/hide the overlay along with the edit

It will be available in 7.4.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 raal 2022-10-24 20:41:59 UTC
*** Bug 151733 has been marked as a duplicate of this bug. ***
Comment 8 Mike Kaganski 2022-10-27 12:25:10 UTC
*** Bug 151784 has been marked as a duplicate of this bug. ***
Comment 9 Julien Nabet 2022-11-02 15:58:27 UTC
*** Bug 151867 has been marked as a duplicate of this bug. ***
Comment 10 Eike Rathke (retired, only occasionally showing up) 2022-11-03 14:49:11 UTC
*** Bug 151877 has been marked as a duplicate of this bug. ***