Resolves: tdf#151699 show/hide the overlay along with the edit

if its present

Change-Id: I9f167117329b9fa33a79271c1f97fcb10ab9de32
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/141665
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>